force-app/main/default/objects/Legend_Gallery_Image__c/Legend_Gallery_Image__c.object-meta.xml
<CustomObject>
    <label>Legend Gallery Image</label>
    <nameField>
        <label>LegendGalleryImage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legend Gallery Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>