force-app/main/default/objects/Legend_Gallery_Image__c/fields/ENG_Description__c.field-meta.xml
<CustomField>
    <fullName>ENG_Description__c</fullName>
    <label>ENG_Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>