force-app/main/default/objects/Legend_Gallery_Image__c/fields/FR_Description__c.field-meta.xml
<CustomField>
    <fullName>FR_Description__c</fullName>
    <label>FR_Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>