force-app/main/default/objects/Legend_Gallery_Image__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <description>The Object Type this Image is available for ie. Product2, Account .....</description>
    <label>Object Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>